# INI-Reader-Cplusplus

./: .gitignore  CMakeLists.txt  README.MD  main.cpp  testrunner.cpp
IniReader/: CMakeLists.txt
IniReader/include/IniReader/: ini_reader.h
IniReader/src/: ini_reader.cpp
